removed unnecessary :jvm-opts for Java 9 compatibility
(ClojureScript 1.10.63 and above no longer depend on java.xml.bind)